// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SceneRuleTargetColorEditor > should render as expected 1`] = `
<div>
  <div
    data-mocked="Grid"
    griddefinition="[{"colspan":9},{"colspan":3}]"
  >
    <div
      data-mocked="Input"
      disabled=""
      value="#0972d3"
    />
    <div
      data-testid="color-swatch"
      style="background-color: #0972d3; border-color: #0972d3; width: 100%; height: 30px; border-style: solid; border-width: 1px; cursor: pointer;"
    />
  </div>
</div>
`;

exports[`SceneRuleTargetColorEditor > should toggle color picker on click 1`] = `
<div>
  <div
    data-mocked="Grid"
    griddefinition="[{"colspan":9},{"colspan":3}]"
  >
    <div
      data-mocked="Input"
      disabled=""
      value="#0972d3"
    />
    <div
      data-testid="color-swatch"
      style="background-color: #0972d3; border-color: #0972d3; width: 100%; height: 30px; border-style: solid; border-width: 1px; cursor: pointer;"
    />
    <div
      data-mocked="ColorPicker"
    >
      {"color":"#0972d3"}
    </div>
  </div>
</div>
`;
